--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "tic-tac-toe": {
+    "tictactoe": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -37,7 +37,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/tic-tac-toe",
+            "outputPath": "dist/tictactoe-angular",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -81,18 +81,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "tic-tac-toe:build"
+            "browserTarget": "tictactoe:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "tic-tac-toe:build:production"
+              "browserTarget": "tictactoe:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "tic-tac-toe:build"
+            "browserTarget": "tictactoe:build"
           }
         },
         "test": {
@@ -126,7 +126,7 @@
         }
       }
     },
-    "tic-tac-toe-e2e": {
+    "tictactoe-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "prefix": "",
@@ -135,11 +135,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "tic-tac-toe:serve"
+            "devServerTarget": "tictactoe:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "tic-tac-toe:serve:production"
+              "devServerTarget": "tictactoe:serve:production"
             }
           }
         },
@@ -155,5 +155,5 @@
       }
     }
   },
-  "defaultProject": "tic-tac-toe"
+  "defaultProject": "tictactoe"
 }
