--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "ng-tictactoe",
+  "name": "tictactoe-angular",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build -- --prod --base-href tictactoe-angular",
+    "deploy": "gh-pages -d dist/tictactoe-angular",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -29,10 +31,11 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "gh-pages": "^2.0.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.1.1",
